--- a/provisioning/wls-11g-provisioning.yml
+++ b/provisioning/wls-11g-provisioning.yml
@@ -1,11 +1,13 @@
 # Executed from Vagrant
-# Can be run also manually, as user vagrant, with: `ansible-playbook provisioning.yml -i inventory`
-# Add -v for verbose or -vvv for mode
+# Can be run also manually, as user vagrant, with: `ansible-playbook wls-11g-provisioning.yml -i inventory`
+# Add -v for verbose or -vvv for more
 ---
+
 - name: Configure CentOS7 with WebLogic 11g - os, folders, jdk, wls 11g
   hosts: was
   become: yes
   roles:
     - role: linux-env
+    # Role for installing weblogic
     - role: fmw-software
       become_user: "{{ oracle_user }}"
