Updated Vagrant machine name

--- a/provisioning/wls-11g-domain-setup.yml
+++ b/provisioning/wls-11g-domain-setup.yml
@@ -3,7 +3,7 @@
 ---
 
 - name: Configure CentOS7 with WebLogic 11g domain
-  hosts: was
+  hosts: wls
   become: yes
   roles:
     # Role for creating a base domain
