--- a/provisioning/wls-11g-provisioning.yml
+++ b/provisioning/wls-11g-provisioning.yml
@@ -4,7 +4,7 @@
 ---
 
 - name: Configure CentOS7 with WebLogic 11g - os, folders, jdk, wls 11g
-  hosts: was
+  hosts: wls
   become: yes
   roles:
     - role: linux-env
